080 ==> 273137 : Make XMP Side Car Files Hidden Or Use Separate Database To Store Them.
081 ==> 252458 : Sort order in SlideShow.
082 ==> 277370 : Unclear licensing for profiles/prophoto.icm and profiles/srgb-d65.icm.
083 ==> 221985 : Update histogram before preview.
084 ==> 208286 : Lock zoom when switching photos : add context menu in preview thumbbar.
085 ==> 182110 : Geolocation tab : add "loc.alize.us" support to the more info web service link.
086 ==> 216636 : Option to set parent album in Album -> New Album.
087 ==> 287099 : digiKam crash when using facerecognition.
088 ==> 151849 : Add Right-MouseButton-menu entry to exit fullscreen [patch].
089 ==> 251887 : Holding SHIFT in timeline to select range. 
090 ==> 289330 : Album file watch failing (QKqueueFileSystemWatcherEngine:addPaths: open: Too many open files in system).
091 ==> 287267 : IptcCore tags are written incorrectly.
092 ==> 298178 : Move photos dialog default button is Cancel, not Ok
093 ==> 296798 : Crop selection not remembered.
094 ==> 297970 : Wrong image deleted
095 ==> 158766 : Using keyboard with timeline view.
096 ==> 298491 : Typos in templatemanager.cpp.
097 ==> 297490 : Copy tags when creating a new version.
098 ==> 297804 : Saving an image loses portait orientation.
099 ==> 298380 : Versioning settings active after digikam start even if versioning is switched off.
100 ==> 288494 : Raw Images disappear after a batch conversion to Jpeg.
101 ==> 274775 : "Find similar search" results are displayed when digiKam starts, although another album is selected.
102 ==> 293500 : Photos disappear from albums after processing in the batch queue.
103 ==> 290983 : digiKam crashes when selecting: Image - Geo-location option.
104 ==> 297549 : digiKam crashes during batch raw converting.
105 ==> 299886 : ShowFoto crash while saving PNG.
106 ==> 289454 : Two faces tagged instead of one.
107 ==> 300277 : digiKam crashed on exit after adding tags to several hundred photos.
108 ==> 

